Fix for console and ability to save on launch
- Love sends output to a console when using lovec.exe only if you actually start it from a console. Adding --console spawns new console on launch.
- Saving all files on launch is usefull sometimes (or all the time if you're me) so why not.

--- a/love-launcher/CHANGELOG
+++ b/love-launcher/CHANGELOG
@@ -4,7 +4,7 @@
 1.0.1
 - Several small fixes
 
-1.0.2 
+1.0.2
 - Added a ReadMe
 
 1.0.3
@@ -12,3 +12,7 @@
 
 1.0.4
 - Added support overwriting the game on each launch. The switch for that is stored in the use settings.
+
+1.0.5
+- Added support for saving all files on launch
+- Fixed console support
